@@ -45,6 +45,9 @@ Version 1.6.24beta02 [June 19, 2016]
     implemented in 1.7), however a simple safe fix here is to chose the lowest
     numbered filter in the list from png_set_filter (this only works if the
     first problem is also fixed) (John Bowler).
+  Avoid filter-selection heuristic sum calculations in cases where only one
+    filter is a candidate for selection. This trades off code size (added
+    png_setup_*_row_only() functions) for speed.
 
 Send comments/corrections/commendations to png-mng-implement at lists.sf.net
 (subscription required; visit
